gcc/testsuite/gm2/pim/pass/minmaxreal.mod
MODULE minmaxreal ;  

CONST
   min = MIN (REAL) ;
   max = MAX (REAL) ;

END minmaxreal.
