gcc/testsuite/gm2/pim/fail/missingtsize.mod
MODULE missingtsize ;

CONST
   NoOfBytes = TSIZE (CARDINAL) ;

BEGIN

END missingtsize.
